--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "clsx": "^2.1.1",
     "halal-market": "link:",
     "lucide-react": "^0.522.0",
+    "prop-types": "^15.8.1",
     "react": "^19.1.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "recharts": "^3.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
